<resources>
    <string name="app_name">Find My School</string>

    <!--Login activity-->
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="password_confirm_hint">Confirm Password</string>
    <string name="image_login_description">Default image login</string>
    <string name="sign_in">Entrar com email</string>
    <string name="sign_up">Criar Usuario com email</string>
    <string name="erro_create_email">Não foi possível criar novo usuário</string>
    <string name="invalid_email">Email invalido</string>
    <string name="invalid_password">Senha muito curta</string>
    <string name="user_not_found">Nao foi possivel logar com esse usuario</string>
    <string name="not_account">Não tem conta? Crie uma</string>
    <!--coisas do facebook sdk-->
    <string name="facebook_app_id">115818592449584</string>
    <string name="fb_login_protocol_scheme">fb115818592449584</string>


    <!--User Information-->
    <string name="user_email">emaildeteste@nathanelucas.com</string>

    <!--Geral-->
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_teste">Teste</string>
    <string-array name="estados_brasil">
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
    <string name="busca_escola">Procure sua Escola!</string>
    <string name="busca_estado">Selecione um Estado:</string>
    <string name="busca_creche">Creche</string>
    <string name="busca_fundamental">Ensino Fundamental</string>
    <string name="busca_medio">Ensino Médio</string>
    <string name="busca_btn">Buscar</string>
    <string name="metodo_text">Escolha o seu metodo de pesquisa!</string>
    <string name="lista_metodo_btn">Pesquise por Lista!</string>
    <string name="mapa_metodo_btn">Pesquise pela sua Localização!</string>
    <string name="texto_raio">Digite o Raio que deseja buscar ao seu redor!</string>

</resources>
