<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nathanelucas.findmyschool.activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/user_book_img"
        android:maxHeight="10dp"
        android:layout_marginTop="34dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/image_login_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/imageView"
        android:id="@+id/linearForm"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_input_hint"
            android:layout_weight="1"
            android:drawableStart="@drawable/mail_icon"/>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_input_hint"
            android:drawableStart="@drawable/password_icon"/>

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/not_account"
            android:textAlignment="center"
            android:textSize="15sp"
            android:onClick="onClick" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/gBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="onClick"
                app:srcCompat="@drawable/g_icon" />

            <ImageButton
                android:id="@+id/emailBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="onClick"
                app:srcCompat="@drawable/mail_sign_in_icon" />

            <ImageButton
                android:id="@+id/fbBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:onClick="onClick"
                app:srcCompat="@drawable/fb_icon" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
